# Clock

./: CMakeLists.txt  LICENSE  README.md  main.cpp
qml/: Main.qml
qml/Components/: Divider.qml
qml/Controls/: IconButton.qml
qml/Pages/: AboutInfoPage.qml  BluetoothInfoPage.qml  ClockPage.qml  NotificationsInfoPage.qml  PrivacyInfoPage.qml  SettingsListPage.qml  WifiPage.qml
qml/Styles/: Colors.qml
qml/components/: BackButtonComponent.qml  Divider.qml
qml/pages/: AboutInfoPage.qml  BluetoothInfoPage.qml  ClockPage.qml  DateTimeInfoPage.qml  DeveloperOptionsPage.qml  DisplayInfoPage.qml  LanguageInfoPage.qml  NotificationsInfoPage.qml  PrivacyInfoPage.qml  SettingsListPage.qml  SoundInfoPage.qml  UpdatesInfoPage.qml  WifiInfoPage.qml
qml/theme/: Styling.qml
src/: main.cpp
src/app/: timezonemanager.cpp  timezonemanager.h
src/services/connman/: ConnmanServiceModel.cpp  ConnmanServiceModel.h  MockConnmanServiceModel.cpp  MockConnmanServiceModel.h
